--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -559,8 +559,9 @@ ul.timeline {
 
 .navbar .tt-menu {
   //min-width: 160px;
-  width: 380px;
-
+  width: 350px;
+  left: auto !important;
+  right: 0 !important;
 }
 
 ///**********************************************************
@@ -1087,4 +1088,74 @@ body.splash {
   font-size: 11px;
   font-family: @font-family-sans-serif;
   text-transform: uppercase;
+}
+
+
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+  &.small {
+    margin: 0 auto;
+  }
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: @brand-primary;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner.small > div {
+  width: 5px;
+  height: 5px;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+}
+
+
+.jsn-searchbox {
+  position: relative;
+
+  .spinner {
+    display: none;
+
+    position: absolute;
+    right: 7px;
+    top: 8px;
+    z-index: 99;
+    width: 30px;
+  }
+
+  &.loading .spinner {
+    display: block;
+  }
 }
