--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -40,14 +40,19 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}"><i class="fa fa-search"></i></a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search" action="{{ path('search') }}" method="POST">
-                    <div class="form-group">
+                <form class="navbar-form navbar-right js-form-nosubmit" role="search" action="{{ path('search') }}" method="POST">
+                    <div class="form-group jsn-searchbox">
                         <input
                                 id="jsn-search"
                                 type="text"
                                 class="form-control search js-autocomplete js-quicksearch"
                                 placeholder="Quick Search"
                                 >
+                        <div class="spinner small">
+                            <div class="bounce1"></div>
+                            <div class="bounce2"></div>
+                            <div class="bounce3"></div>
+                        </div>
                     </div>
                 </form>
             </div>
