Fix popover display in refinement

--- a/app/Resources/views/search/includes/refine.html.twig
+++ b/app/Resources/views/search/includes/refine.html.twig
@@ -41,6 +41,7 @@
         <i class="fa fa-info-circle js-popover text-muted"
            data-toggle="popover"
            data-trigger="hover"
+           data-container=".search-refine"
            data-placement="right"
            data-title="Early Modern Science"
            data-content="only show aspects of persons who have a relation with subjects from early modern sciences"></i>
@@ -52,6 +53,7 @@
         <i class="fa fa-info-circle js-popover text-muted"
            data-toggle="popover"
            data-trigger="hover"
+           data-container=".search-refine"
            data-placement="right"
            data-title="Early Modern Science"
            data-content="only show aspects of persons who do NOT have a relation with subjects from early modern sciences"></i>
