--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -949,11 +949,17 @@ a.geo {
   }
 }
 
-.search-refine h6 {
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
+.search-refine {
+  h6 {
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
 
+  .popover {
+    // prevent squeezing of the popover because of its container relationship
+    min-width: 350px;
+  }
+}
 .restriction {
   padding-right: 20px;
   position: relative;
