Spelling of quick search

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -46,7 +46,7 @@
                                 id="jsn-search"
                                 type="text"
                                 class="form-control search js-autocomplete js-quicksearch"
-                                placeholder="Quick Search"
+                                placeholder="Quick search"
                                 >
                         <div class="spinner small">
                             <div class="bounce1"></div>
