Allow extra styling on modal body

--- a/app/Resources/views/modal.html.twig
+++ b/app/Resources/views/modal.html.twig
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="{{ id }}-label">{{ title }}</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" {% block extra_modal_attributes %}{% endblock %}>
                 {% block body %}{% endblock %}
             </div>
             {% if footer|default(false) %}
