Add filtering by source

--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -1165,3 +1165,30 @@ body.splash {
     display: block;
   }
 }
+
+
+.click-to-select tr {
+  cursor: pointer;
+}
+
+.table-modal {
+  margin-bottom: 0;
+
+  tr:first-child {
+    td {
+      border-top: 0 none;
+    }
+  }
+
+  tr td:first-child {
+    padding-left: 10px;
+  }
+
+  tr td:last-child {
+    padding-right: 10px;
+  }
+}
+
+abbr {
+  text-decoration: none;
+}
