--- a/app/Resources/views/search/includes/refine.html.twig
+++ b/app/Resources/views/search/includes/refine.html.twig
@@ -115,42 +115,24 @@
     {% endif %}
 </ul>
 
-<h6>Continent</h6>
-<ul class="list-unstyled">
-    {% if query.continent %}
+<h6>Source</h6>
+    <ul class="list-unstyled">
+        {% if query.sources|length > 0 %}
         <li class="restriction">
-            <em>{{ query.continent|format_continent }}</em>
-            {{ macro.remove_restriction(params|unset('continent')) }}
+            {{ query.sources|length }} selected
+            {{ macro.remove_restriction(params|unset('sources')) }}
         </li>
-    {% elseif filter.continents|length > 0 %}
-        {% for c, label in filter.continents %}
-            <li><a href="{{ path('search', params|merge({continent: c})) }}">{{ label }}</a></li>
-        {% endfor %}
-    {% else %}
-        <li><em class="text-muted">Not applicable</em></li>
-    {% endif %}
-</ul>
-
-<h6>Country</h6>
-<ul class="list-unstyled">
-    {% if query.country %}
-        <li class="restriction">
-            <em>{{ query.country|format_country }}</em>
-            {{ macro.remove_restriction(params|unset('country')) }}
-        </li>
-    {% elseif filter.countries|length > 0 %}
-        {% for c, label in filter.countries_short %}
-            <li><a href="{{ path('search', params|merge({country: c})) }}">{{ label }}</a></li>
-        {% endfor %}
-        {% if filter.countries|length > 7 %}
-            <li><a href="#" data-toggle="modal" data-target="#modal-countries">
-                    <em>{{ filter.countries|length - 7 }} more...</em>
-                </a></li>
+        <li><a href="#" data-toggle="modal" data-target="#modal-sources">
+                <em>change selection</em>
+            </a></li>
+        {% elseif filter.sources is defined and (filter.sources.sources|length > 0 or filter.sources.groups|length > 0) %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-sources">
+                    <em>view list ({{ filter.sources.sources|length + filter.sources.groups|length }})</em>
+            </a></li>
+        {% else %}
+            <li><em class="text-muted">Not applicable</em></li>
         {% endif %}
-    {% else %}
-        <li><em class="text-muted">Not applicable</em></li>
-    {% endif %}
-</ul>
+    </ul>
 
 <h6>Place</h6>
 <ul class="list-unstyled">
@@ -186,13 +168,40 @@
     {% endif %}
 </ul>
 
-<h6>Source</h6>
-    <ul class="list-unstyled">
-        {% if filter.sources is defined and filter.sources|length > 0 %}
-            <li><a href="#" data-toggle="modal" data-target="#modal-sources">
-                    <em>view list ({{ filter.sources|length }})</em>
-            </a></li>
-        {% else %}
-            <li><em class="text-muted">Not applicable</em></li>
+<h6>Country</h6>
+<ul class="list-unstyled">
+    {% if query.country %}
+        <li class="restriction">
+            <em>{{ query.country|format_country }}</em>
+            {{ macro.remove_restriction(params|unset('country')) }}
+        </li>
+    {% elseif filter.countries|length > 0 %}
+        {% for c, label in filter.countries_short %}
+            <li><a href="{{ path('search', params|merge({country: c})) }}">{{ label }}</a></li>
+        {% endfor %}
+        {% if filter.countries|length > 7 %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-countries">
+                    <em>{{ filter.countries|length - 7 }} more...</em>
+                </a></li>
         {% endif %}
-    </ul>
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+<h6>Continent</h6>
+<ul class="list-unstyled">
+    {% if query.continent %}
+        <li class="restriction">
+            <em>{{ query.continent|format_continent }}</em>
+            {{ macro.remove_restriction(params|unset('continent')) }}
+        </li>
+    {% elseif filter.continents|length > 0 %}
+        {% for c, label in filter.continents %}
+            <li><a href="{{ path('search', params|merge({continent: c})) }}">{{ label }}</a></li>
+        {% endfor %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+
+
