Refactor wording "other" -> "miscellaneous"

--- a/app/Resources/views/map/map.html.twig
+++ b/app/Resources/views/map/map.html.twig
@@ -37,7 +37,7 @@
             <input type="checkbox" class="fancy-checkbox" value="1" name="type" checked="checked" id="js-type-bio"/><label for="js-type-bio" data-toggle="tooltip" data-placement="bottom" title="Biographical">B</label>
             <input type="checkbox" class="fancy-checkbox" value="2" name="type" checked="checked" id="js-type-edu"/><label for="js-type-edu" data-toggle="tooltip" data-placement="bottom" title="Education">E</label>
             <input type="checkbox" class="fancy-checkbox" value="4" name="type" checked="checked" id="js-type-crr"/><label for="js-type-crr" data-toggle="tooltip" data-placement="bottom" title="Career">C</label>
-            <input type="checkbox" class="fancy-checkbox" value="8" name="type" checked="checked" id="js-type-oth"/><label class="last" for="js-type-oth" data-toggle="tooltip" data-placement="bottom" title="Other">O</label>
+            <input type="checkbox" class="fancy-checkbox" value="8" name="type" checked="checked" id="js-type-misc"/><label class="last" for="js-type-misc" data-toggle="tooltip" data-placement="bottom" title="Miscellaneous">M</label>
         </div>
         <div class="f3">
             <button type="button" id="js-map-boundary" data-href="{{ path('search') }}" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" title="Use&nbsp;visible&nbsp;map&nbsp;section as&nbsp;boundary&nbsp;for&nbsp;search"><i class="fa fa-search"></i></button>
