Add meta keywords

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,8 @@
         <meta name="msapplication-TileImage" content="{{ asset('images/ms-icon-144x144.png') }}">
         <meta name="theme-color" content="#aa1133">
 
+        <meta name="keywords" content="Jesuit science, list of Jesuit scientists, Jesuit astronomy, famous Jesuits, Jesuit scholars, Society of Jesus, Societas Jesu, Societas Iesu, early mod- ern period, early modern science, early modern sciences, history of sci- ence, history of mathematics, prosopography, Digital Humanities, Som- mervogel, New Sommervogel Online">
+
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
         {% block stylesheets %}{% endblock %}
     </head>
