Update front page text

--- a/app/Resources/views/static/index.html.twig
+++ b/app/Resources/views/static/index.html.twig
@@ -10,13 +10,13 @@
     <div class="container container-narrow">
         <div class="col-xs-12">
             <p style="margin-top: 20px; margin-bottom: 20px;">
-                The Jesuit Science Network is a biographical database on Jesuit
+                The Jesuit Science Network is a digital prosopography on Jesuit
                 scholars in the early modern sciences, encompassing the period
                 between the foundation of the Society of Jesus in 1540 and the
                 first few decades after its suppression in 1773.
-                {#It offers#}
-                {#extensive search and display functionalities and also allows for#}
-                {#data export.#}
+                It provides free access to an extensive collection of
+                biographical information on early modern Jesuits in the
+                sciences along with their contemporary contacts.
             </p>
 
             {% include "include/searchbox.html.twig" %}
