--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -79,40 +79,40 @@
                 <div class="col-sm-4 col-xs-12">
                     <h4>Partners</h4>
                     <p>
-                        The project behind the Jesuit Science Network is funded by the <a href="http://www.dfg.de/en/">DFG</a>
-                        (2011-2016) and located at the <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html">Interdisciplinary Centre for Science and Technology Studies</a> at
-                        <a href="http://www.uni-wuppertal.de/en/home.html">Wuppertal University</a>.
+                        The Jesuit Science Network originated from a research project funded by the <a href="http://www.dfg.de/en/">DFG</a> (2011-2016) and is located at the <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html">Interdisciplinary Centre for Science and Technology Studies</a> at <a href="http://www.uni-wuppertal.de/en/home.html">Wuppertal University</a>.
                     </p>
                     <p>
-                        The main database behind the JSN along with its
-                        editing tools are powered by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
+                        The digital infrastructure of the Jesuit Science Network
+                        was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
                     </p>
                 </div>
                 <div class="col-sm-4 col-xs-6 text-right">
-                    <h4>Project manager</h4>
-
-                    <p>
-                        <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/prof-dr-volker-remmert.html">Volker Remmert</a><br>
-                        Wuppertal University<br>
-                        remmert@<span class="hidden">null</span>uni-wuppertal.de
-                    </p>
-
                     <h4>Primary investigator</h4>
                     <p>
                         <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/dagmar-mrozik.html">Dagmar Mrozik</a><br>
                         Wuppertal University<br>
                         mrozik@<span class="hidden">null</span>uni-wuppertal.de
                     </p>
+
+                    <h4>Academic supervisor</h4>
+                    <p>
+                        <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/prof-dr-volker-remmert.html">Volker Remmert</a><br>
+                        Wuppertal University<br>
+                        remmert@<span class="hidden">null</span>uni-wuppertal.de
+                    </p>
+
                 </div>
                 <div class="col-sm-4 col-xs-6">
-                    <h4>Contact address</h4>
+                    <h4>Contact</h4>
 
                     <p>
-                        IZWT<br>
-                        Wuppertal University<br>
+                        Dagmar Mrozik<br>
+                        IZWT - Wuppertal University<br>
                         Gaußstraße 20<br>
                         42119 Wuppertal<br>
-                        Germany
+                        Germany<br><br>
+                        mrozik@<span class="hidden">null</span>uni-wuppertal.de<br>
+                        +49 176 72 88 04 14
                     </p>
 
                 </div>
