Update about page

--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -8,31 +8,63 @@
             <h3>About</h3>
 
             <p>
-                The idea behind the Jesuit Science Network was inspired by
-                research by Steven J. Harris. For his PhD thesis "Jesuit
-                ideology & Jesuit science” from 1988, Harris used the
-                bibliographical data provided by Carlos Sommervogel’s
-                Bibliothèque de la Compagnie de Jésus as a basis for statistical
-                surveys on Jesuit publications in the early modern sciences,
-                thus giving a qualitative analysis of Jesuit ‘scientific' output
-                at the time. From this, the JSN adapted the Bibliothèque as its
-                starting point; however, it looks at the biographical, not the
-                bibliographical data contained and also broadens the scope to
-                not only include Jesuit authors, but also teachers in the early
-                modern sciences. The JSN furthermore uses additional sources in
-                order to correct and expand on the information given by the
-                Bibliothèque. <a href="{{ path('sources') }}">Find out more
-                    about theses sources</a>.
+                The Jesuit Science Network (JSN) is the PhD project of
+                <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/dagmar-mrozik.html">Dagmar Mrozik</a>,
+                realized at the <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html">Interdisciplinary Centre for Science and Technology Studies</a> at <a href="http://www.uni-wuppertal.de/en/home.html">Wuppertal University</a>
+                under the supervision of <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/prof-dr-volker-remmert.html">Volker Remmert</a>.
+                It originated from a research project funded by the <a href="http://www.dfg.de/en/">DFG</a>;
+                the digital infrastructure was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project
+                of the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
+            </p>
+            <p>
+                This page provides introductory information about Jesuit scholars
+                in the early modern sciences and the project itself. For more
+                information, please see the corresponding PhD thesis [link!!].
             </p>
 
-            <h3 id="jesuit-science">Jesuit early modern science</h3>
+            <h3 id="jesuit-science">Jesuit activity in the early modern sciences</h3>
 
             <p>
-                But what exactly are Jesuit early modern sciences? Harris'
-                followup paper "Les chaires de mathématiques" from 1997 offers a
-                detailed list of the topics in consideration for his own work
-                and now also the Jesuit Science Network:
+                Since its foundation in 1540, the Society of Jesus has been
+                inextricably linked with scholarship. Among the topics that
+                the Jesuits engaged in between the 16th and 19th centuries,
+                we find geometry and military architecture, calendars and
+                astronomical observations, and even botany and practical
+                medical knowledge - all pertaining to what we now call the
+                early modern sciences. A comprehensive list can be found
+                further below.
             </p>
+
+            <h3 id="the-jsn">The Jesuit Science Network</h3>
+
+            <p>
+                As broad as this range is in content, as widely spread over
+                place and time were its practitioners. The JSN was hence
+                devised as the first general overview over Jesuit scholars
+                in the early modern sciences and realized in form of a
+                digital prosopography, i. e., a digital collection of
+                standardized biographical information, with the corresponding
+                website (that you are currently visiting) as its free access
+                point.
+            </p>
+            <p>
+                The site allows to explore, search, and export the collected
+                information. At the core of the project is the research
+                interest expressed in the four questions after the “who”,
+                “what”, “where”, and “when”.
+            </p>
+
+            <h3 id="ems">Early modern sciences</h3>
+            <p>
+                To make a long story short and summarize the sentiments of
+                several introductions into early modern science,
+                ‘early modern science’ itself is the modern attempt to find
+                an umbrella term for those various areas of learned activity
+                in the early modern period that can be considered precursors
+                to what is now often condensed to STEM, science, technology,
+                engineering, and mathematics. For the practical realization
+                of the Jesuit prosopography, the JSN on a list subjects given
+                in a <abbr class="js-popover" data-trigger="hover" data-placement="bottom" data-content="“Les chaires de mathématiques” in Les Jésuites à la Renaissance : système éducatif et production du savoir, ed. by Luce Giard, Presses universitaires de France, pp. 239–261">1997 paper by Steven J. Harris</abbr>:
 
             <dl class="dl-horizontal">
                 <dt>Pure mathematics</dt>
@@ -87,6 +119,68 @@
                     weight
                 </dd>
             </dl>
+
+            <p>
+                Please note that this list is not exhaustive.
+            </p>
+
+            <h3 id="sources">The sources</h3>
+            <p>
+                The main source for the biographical data collected and
+                presented in the JSN is the twelve-volume <em>Bibliothèque de
+                la Compagnie de Jésus</em>. The first nine volumes were edited
+                by the French Jesuit Carlos Sommervogel (1834–1883) between
+                1890 and 1900 and supplemented by three more volumes in 1909
+                and 1932; the entire series was reprinted in 1960.
+            </p>
+            <p>
+                A more modern cornerstone of the project is the four-volume
+                <em>Diccionario Histórico de la Compagñía de Jesús</em>, a
+                Spanish-speaking historical dictionary on the Society of Jesus
+                edited by Charles O’Neill (1927–2009) et al. in 2001.
+                It contains articles not only on Jesuits, but also places,
+                institutions, and even subjects connected to or treated by
+                Jesuits.
+            </p>
+            <p>
+                Aside from these two fundamental works, the Jesuit Science
+                Network also makes use of a number of smaller studies, most
+                of them with a geographical focus. See the
+                <a href="{{ path('sources') }}">complete list of sources</a>.
+            </p>
+
+            <h3 id="collected">Collected information</h3>
+            <p>
+                For each person in the Jesuit Science Network, the same kind
+                of information is collected from the sources:
+            </p>
+
+            <dl class="dl-horizontal">
+                <dt>Name</dt>
+                <dd>Norm name, alternate spellings, VIAF</dd>
+
+                <dt>Biographical data</dt>
+                <dd>Date and place of birth, date and place of death, entry in the order, resignation, expulsion</dd>
+
+                <dt>Education</dt>
+                <dd>Date, place, subject</dd>
+
+                <dt>Career</dt>
+                <dd>Date, place, subject, occupation</dd>
+
+                <dt>Miscellaneous</dt>
+                <dd>Relations, ‘true’ miscellaneous</dd>
+            </dl>
+
+            <h3 id="infra">Digital infrastructure</h3>
+            <p>
+                The digital infrastructure for the Jesuit Science Network
+                was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
+                An additional intermediary MySQL database allows for more
+                efficient data access. The corresponding source code of the
+                project can be found <a href="#">on GitHub</a> and is provided
+                under the <a href="#">MIT license</a>.
+            </p>
         </div>
     </div>
 
