Add page title to detail page

--- a/app/Resources/views/default/detail.html.twig
+++ b/app/Resources/views/default/detail.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-
+{% set title = (person.displayName ~ (person.dateOfBirth or person.dateOfDeath ? " (" ~ person.dateOfBirth ~ "–" ~ person.dateOfDeath ~ ")" : "")) %}
 
 {% block content %}
     <style type="text/css">
