Add password info on splash page

--- a/app/Resources/views/splash.html.twig
+++ b/app/Resources/views/splash.html.twig
@@ -16,6 +16,11 @@
 
     </div>
 
+    <div class="alert alert-info custom">
+      <span style="line-height: 30px">If you received a username and password for this site, click here to login and access the preview version.</span>
+      <a href="{{ path('homepage') }}" class="btn btn-sm btn-info pull-right">Login</a>
+    </div>
+
     <div class="narrower">
       <h5>What is the Jesuit Science Network (JSN)?</h5>
 
